@@ -153,6 +153,10 @@ $labels['markunread']       = 'As unread';
 $labels['markflagged']      = 'As flagged';
 $labels['markunflagged']    = 'As unflagged';
 $labels['moreactions']      = 'More actions...';
+$labels['markallread']      = 'Mark all as read';
+$labels['folders-cur']      = 'Selected folder only';
+$labels['folders-sub']      = 'Selected folder and its subfolders';
+$labels['folders-all']      = 'All folders';
 $labels['more']             = 'More';
 $labels['back']             = 'Back';
 $labels['options']          = 'Options';
